[package]
name = "d11emu"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = {version = "0.10.2", features = ["history", "completion"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
overflow-checks = false